--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,7 @@
         <option value="legtobbVevoHavi">Melyik vásárlónk rendelt előző hónapokban a legnagyobb értékben (havi lebontásban)?</option>
         <option value="legtobbVevo">Ki az eddigi legtöbbet vásárló vevőnk?</option>
         <option value="Hirlevel">Melyek azok a vevőik, akik kértek hírlevelet, de még nem vásároltak?</option>
+        <option value="termekarak">Termékek összesített ára</option>
 
     </select>
     <div id="content"></div>
