--- a/index2.html
+++ b/index2.html
@@ -25,6 +25,8 @@
         <option value="legtobbVevo">Ki az eddigi legtöbbet vásárló vevőnk?</option>
         <option value="Hirlevel">Melyek azok a vevőik, akik kértek hírlevelet, de még nem vásároltak?</option>
         <option value="termekarak">Termékek összesített ára</option>
+        <option value="pesti_felh">Pesti felhasználók</option>
+        <option value="rendelesarak">Rendelésárak</option>
 
     </select>
     <div id="content"></div>
